# o_cluster_tool

./: .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  README.md  todo.txt
client/: todo.txt
server/: .CMakeLists.txt.swp  CMakeLists.txt  constants.hpp  io.cpp  io.hpp  jsonparse.cpp  jsonparse.hpp  main.cpp  ocr.json  optparse.cpp  optparse.hpp  todo.txt
